adicionada feature criar sala

--- a/templates/index.html
+++ b/templates/index.html
@@ -56,12 +56,40 @@
         </div>
       </a>
 
+
+    <div class="row">
+      &nbsp;
+    </div>
+    
+    <div class="col-md-offset-2">
+      <h2>Or create a room: </h2> <br />
+        <div class="input-group col-lg-7">
+          <form role="form" class="form-horizontal" method="POST" action = "/new_room">
+              <div class="input-group">
+                <input name="room_name" type="text" class="form-control" placeholder="name_of_your_room">
+                <span class="input-group-btn">
+                    <button type="submit" class="btn btn-search">Create!</button>
+                </span>
+            </div>
+          </form>
+        </div>      
     </div>
 
-  <div class="row">
-    <h2>Tested using Google Chrome and Mozilla Firefox. <br>
-    You must enable your webcam.</h2>
-  </div>
+    <div class="row">
+        <br />
+        &nbsp;
+        <br />
+    </div>
+    
+    <div class="row">
+        <br />
+        <h4>Tested using Google Chrome and Mozilla Firefox. <br>
+        You must enable your webcam.</h4>
+    </div>
+
+    </div>
+  
+
 
   </div>
 {% endblock %}
